test-cases/negative/test_130_conditional_without_boolean.lay
# negative test: if condition that isn't boolean
# expected: type checker should catch this

if 'hello' then
  print 'world'
end if


